--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "atob": "2.0.3",
     "autoprefixer": "6.7.0",
     "ava": "0.15.2",
-    "babel-core": "5.8.35",
+    "babel-core": "6.24.1",
     "babel-eslint": "6.1.2",
-    "babelify": "6.4.0",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "babel-preset-env": "1.5.2",
+    "babelify": "7.3.0",
     "baconipsum": "0.1.2",
     "bluebird": "3.0.5",
     "body-parser": "1.14.2",
@@ -49,6 +51,7 @@
     "del": "2.2.0",
     "eslint": "3.18.0",
     "eslint-plugin-google-camelcase": "0.0.2",
+    "esprima": "3.1.3",
     "express": "4.14.0",
     "fetch-mock": "5.12.2",
     "file-reader": "1.1.1",
@@ -76,7 +79,7 @@
     "gulp-wrap": "0.11.0",
     "gzip-size": "3.0.0",
     "is-running": "^2.1.0",
-    "jison": "0.4.15",
+    "jison": "0.4.17",
     "jsdom": "9.2.1",
     "json-stable-stringify": "1.0.1",
     "karma": "1.7.0",
