add regenerator runtime

--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,7 @@
       "modules": "commonjs"
     }]
   ],
-  "plugins": ["transform-remove-strict-mode"]
+  "plugins": [
+    "transform-remove-strict-mode"
+  ]
 }
