--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ matrix:
         - gem install percy-capybara
         - gem install phantomjs
         - gem install poltergeist
+        - phantomjs --version
     - env: BUILD_SHARD="integration_tests"
       before_script:
         - pip install --user protobuf
