--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ matrix:
       before_script:
         - pip install --user protobuf
         - gem install percy-capybara
-        - gem install phantomjs
+        - gem install phantomjs -v 2.1.1  # Required by poltergeist
         - gem install poltergeist
         - phantomjs --version
     - env: BUILD_SHARD="integration_tests"
