--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,11 @@ matrix:
         - gem install poltergeist
         - ls -laR /home/travis/.rvm/gems/ruby-2.4.0/gems/phantomjs-2.1.1.0/
         - echo $PATH
+        - ls -la /usr/local/bin/phantom*
+        - rm -f /usr/local/bin/phantomjs
+        - ln -s /home/travis/.rvm/gems/ruby-2.4.0/gems/phantomjs-2.1.1.0/lib/phantomjs /usr/local/bin/phantomjs
+        - which phantomjs
+        - phantomjs --version
     - env: BUILD_SHARD="integration_tests"
       before_script:
         - pip install --user protobuf
