--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ matrix:
     - env: BUILD_SHARD="pre_build_checks_and_unit_tests"
       before_script:
         - pip install --user protobuf
+        - gem install cliver
         - gem install percy-capybara
         - gem install phantomjs
         - gem install poltergeist
