--- a/.travis.yml
+++ b/.travis.yml
@@ -50,14 +50,14 @@ matrix:
         - which phantomjs
         - gem which phantomjs
         - phantomjs --version
+        - echo $PATH
         # Replace
-        - sudo rm -f /usr/local/phantomjs/phantomjs
-        - sudo ln -s /home/travis/.rvm/gems/ruby-2.4.0/gems/phantomjs-2.1.1.0/lib/phantomjs /usr/local/phantomjs/phantomjs
+        - export PATH="/home/travis/.rvm/gems/ruby-2.4.0/gems/phantomjs-2.1.1.0/lib/:$PATH"
         # After
-        - ls -la /usr/local/phantomjs/phantomjs
         - which phantomjs
         - gem which phantomjs
         - phantomjs --version
+        - echo $PATH
     - env: BUILD_SHARD="integration_tests"
       before_script:
         - pip install --user protobuf
