Print more versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,17 +47,26 @@ matrix:
         # Before
         - ls -laR /home/travis/.rvm/gems/ruby-2.4.0/gems/phantomjs-2.1.1.0/
         - ls -la /usr/local/phantomjs/phantomjs
+        - ls -la /usr/local/bin/phantomjs
         - which -a phantomjs
         - gem which -a phantomjs
+        - /usr/local/phantomjs/phantomjs --version
+        - /usr/local/bin/phantomjs --version
+        - /home/travis/.rvm/gems/ruby-2.4.0/gems/phantomjs-2.1.1.0/lib/phantomjs --version
         - phantomjs --version
         - echo $PATH
         # Replace
+        - export PATH=${PATH/\/usr\/local\/phantomjs\/bin:/}
+        - export PATH=${PATH/\/usr\/local\/phantomjs:/}
         - export PATH="/home/travis/.rvm/gems/ruby-2.4.0/gems/phantomjs-2.1.1.0/lib:$PATH"
         # After
+        - echo $PATH
         - which -a phantomjs
         - gem which -a phantomjs
+        - /usr/local/phantomjs/phantomjs --version
+        - /usr/local/bin/phantomjs --version
+        - /home/travis/.rvm/gems/ruby-2.4.0/gems/phantomjs-2.1.1.0/lib/phantomjs --version
         - phantomjs --version
-        - echo $PATH
     - env: BUILD_SHARD="integration_tests"
       before_script:
         - pip install --user protobuf
