--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "shuffle-seed": "1.1.6",
     "sinon": "2.1.0",
     "sinon-chai": "2.13.0",
+    "splittable": "4.0.0",
     "text-table": "0.2.0",
     "through2": "2.0.0",
     "touch": "1.0.0",
