reverted changes in package.json and yarn.lock

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "dependencies": {
     "document-register-element": "1.5.0",
-    "global": "^4.3.2",
     "promise-pjs": "1.1.2",
     "web-animations-js": "2.2.2"
   },
@@ -53,7 +52,7 @@
     "formidable": "1.0.17",
     "fs-extra": "0.27.0",
     "glob": "7.1.2",
-    "gulp": "^3.9.1",
+    "gulp": "3.9.1",
     "gulp-closure-compiler": "0.4.0",
     "gulp-eslint": "3.0.1",
     "gulp-exec": "2.1.2",
@@ -87,7 +86,7 @@
     "karma-mocha": "0.2.2",
     "karma-safari-launcher": "0.1.1",
     "karma-sauce-launcher": "1.1.0",
-    "karma-sinon-chai": "1.2.0",
+    "karma-sinon-chai": "1.2.3",
     "lazypipe": "1.0.1",
     "lolex": "1.4.0",
     "markdown-link-check": "^3.0.3",
@@ -97,12 +96,13 @@
     "morgan": "1.7.0",
     "nodemon": "1.11.0",
     "path": "0.12.7",
+    "phantomjs-prebuilt": "2.1.14",
     "postcss": "5.2.10",
     "postcss-import": "9.1.0",
     "pretty-bytes": "2.0.1",
     "request": "2.73.0",
     "rimraf": "2.5.1",
-    "sinon": "1.17.3",
+    "sinon": "1.17.7",
     "sinon-chai": "2.8.0",
     "text-table": "0.2.0",
     "through2": "2.0.0",
