--- a/.travis.yml
+++ b/.travis.yml
@@ -41,10 +41,7 @@ matrix:
     - env: BUILD_SHARD="pre_build_checks_and_unit_tests"
       before_script:
         - pip install --user protobuf
-        - gem env
-        - gem install percy-capybara
-        - gem install phantomjs
-        - gem install poltergeist
+        - gem install percy-capybara phantomjs poltergeist
         # Poltergeist requires an absolute path to find phantomjs. See #10305.
         - export PATH="`pwd`/node_modules/.bin:$PATH"
     - env: BUILD_SHARD="integration_tests"
