removed {canary,prod}-config changes.

--- a/build-system/global-configs/prod-config.json
+++ b/build-system/global-configs/prod-config.json
@@ -1,5 +1,5 @@
 {
-  "allow-doc-opt-in": ["visibility-v3", "amp-animation", "amp-ad-refresh"],
+  "allow-doc-opt-in": ["visibility-v3", "amp-animation"],
   "allow-url-opt-in": ["pump-early-frame"],
 
   "canary": 0,
