Config for control.

--- a/build-system/global-configs/prod-config.json
+++ b/build-system/global-configs/prod-config.json
@@ -3,6 +3,7 @@
   "allow-url-opt-in": ["pump-early-frame"],
 
   "canary": 0,
+  "control": 0,
   "expAdsenseA4A": 0.01,
   "expDoubleclickA4A": 0.01,
   "a4aProfilingRate": 0.1,
