--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "karma-super-dots-reporter": "^0.1.0",
     "lazypipe": "1.0.1",
     "lolex": "1.4.0",
-    "markdown-link-check": "3.0.3",
+    "markdown-link-check": "^3.0.3",
     "minimatch": "3.0.0",
     "minimist": "1.2.0",
     "mocha": "2.5.3",
