--- a/build-system/global-configs/canary-config.json
+++ b/build-system/global-configs/canary-config.json
@@ -5,6 +5,7 @@
   "canary": 1,
   "expAdsenseA4A": 0.01,
   "expDoubleclickA4A": 0.01,
+  "dbclk-correlator-clear": 0.02,
   "a4aProfilingRate": 1,
   "ad-type-custom": 1,
   "ios-embed-wrapper": 1,
