--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bluebird": "3.0.5",
     "body-parser": "1.14.2",
     "browserify": "14.0.0",
+    "browserify-istanbul": "^2.0.0",
     "chai": "3.5.0",
     "chai-as-promised": "5.2.0",
     "chalk": "1.1.3",
