--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "karma-fixture": "0.2.6",
     "karma-html2js-preprocessor": "0.1.0",
     "karma-mocha": "0.2.2",
-    "karma-mocha-reporter": "^2.2.3",
+    "karma-mocha-reporter": "2.2.3",
     "karma-safari-launcher": "0.1.1",
     "karma-sauce-launcher": "1.1.0",
     "karma-sinon-chai": "1.2.3",
