--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "gulp-git": "^2.3.2",
     "gulp-help": "1.6.1",
     "gulp-if": "2.0.0",
-    "gulp-intercept": "^0.1.0",
+    "gulp-intercept": "0.1.0",
     "gulp-load-plugins": "1.2.0",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
@@ -116,7 +116,7 @@
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.9.0",
-    "yamljs": "^0.3.0"
+    "yamljs": "0.3.0"
   },
   "ava": {
     "files": [
