--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "document-register-element": "1.5.0",
+    "karma-coverage": "1.1.1",
     "promise-pjs": "1.1.3",
     "web-animations-js": "2.3.1"
   },
