--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prepend-v0": "gulp prepend-global --prod node_modules/AMP_CONFIG.json --local --target dist/v0.js && gulp prepend-global --prod node_modules/AMP_CONFIG.json --local --target dist.3p/current-min/f.js"
   },
   "dependencies": {
+    "browserify-istanbul": "2.0.0",
     "document-register-element": "1.5.0",
     "karma-coverage": "1.1.1",
     "promise-pjs": "1.1.3",
