fix root level glob to not have */ prefix

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 * @cramforce, @dvoytenko, @jridgewell
-*/*.protoascii @ampproject/validator
+*.protoascii @ampproject/validator
 ads/ @lannka, @zhouyx
 build-system/ @erwinmombay, @cramforce
 contributing/ @jrozier
