--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prepend-v0": "gulp prepend-global --prod node_modules/AMP_CONFIG.json --local --target dist/v0.js && gulp prepend-global --prod node_modules/AMP_CONFIG.json --local --target dist.3p/current-min/f.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "document-register-element": "1.5.0",
     "promise-pjs": "1.1.3",
     "web-animations-js": "2.3.1"
