--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prepend-v0": "gulp prepend-global --prod node_modules/AMP_CONFIG.json --local --target dist/v0.js && gulp prepend-global --prod node_modules/AMP_CONFIG.json --local --target dist.3p/current-min/f.js"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "babel-polyfill": "6.26.0",
     "document-register-element": "1.5.0",
     "promise-pjs": "1.1.3",
     "web-animations-js": "2.3.1"
@@ -35,16 +35,15 @@
     "atob": "2.0.3",
     "autoprefixer": "6.7.0",
     "ava": "0.15.2",
-    "babel-core": "6.24.1",
+    "babel-core": "^6.26.0",
     "babel-eslint": "6.1.2",
-    "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-env": "1.5.2",
-    "babelify": "7.3.0",
+    "babelify": "^7.3.0",
     "baconipsum": "0.1.2",
     "bluebird": "3.0.5",
     "body-parser": "1.14.2",
-    "browserify": "14.0.0",
+    "browserify": "14.4.0",
     "browserify-istanbul": "2.0.0",
     "chai": "3.5.0",
     "chai-as-promised": "5.2.0",
@@ -57,7 +56,6 @@
     "express": "4.14.0",
     "fetch-mock": "5.12.2",
     "file-reader": "1.1.1",
-    "fix-babel-class": "^0.1.0",
     "formidable": "1.0.17",
     "fs-extra": "0.27.0",
     "glob": "7.1.2",
@@ -86,7 +84,7 @@
     "jsdom": "9.2.1",
     "json-stable-stringify": "1.0.1",
     "karma": "1.7.0",
-    "karma-browserify": "5.1.1",
+    "karma-browserify": "^5.1.1",
     "karma-chai": "0.1.0",
     "karma-chai-as-promised": "0.1.2",
     "karma-chrome-launcher": "0.2.2",
