--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "pretty-bytes": "2.0.1",
     "request": "2.73.0",
     "rimraf": "2.5.1",
+    "seedrandom": "2.4.3",
     "sinon": "1.17.7",
     "sinon-chai": "2.8.0",
     "text-table": "0.2.0",
