--- a/.babelrc
+++ b/.babelrc
@@ -10,5 +10,7 @@
     }]
   ],
   sourceType: "module",
-  ignore: ["sha384-generated.js", "bind-expr-impl.js"]
+  ignore: [
+    "sha384-generated.js"
+  ]
 }
