--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ava": "0.15.2",
     "babel-core": "6.26.0",
     "babel-eslint": "6.1.2",
-    "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-env": "1.5.2",
     "babelify": "7.3.0",
     "baconipsum": "0.1.2",
@@ -80,10 +80,11 @@
     "gulp-wrap": "0.11.0",
     "gzip-size": "3.0.0",
     "is-running": "2.1.0",
-    "jison": "0.4.17",
+    "jison": "0.4.18",
     "jsdom": "9.2.1",
     "json-stable-stringify": "1.0.1",
     "karma": "1.7.0",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "5.1.1",
     "karma-chai": "0.1.0",
     "karma-chai-as-promised": "0.1.2",
