--- a/.babelrc
+++ b/.babelrc
@@ -6,11 +6,10 @@
         "browsers": ["Last 2 versions"]
       },
       "modules": "commonjs",
-      sourceType: 'module'
+      sourceType: "module"
     }]
   ],
-  sourceType: "module",
-  ignore: [
-    "sha384-generated.js"
-  ]
+  "sourceType": "module",
+  "ignore": ["sha384-generated.js", "access-expr-impl.js"],
+  "plugins": ["transform-remove-strict-mode"]
 }
