--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "formidable": "1.0.17",
     "fs-extra": "0.27.0",
     "glob": "7.1.2",
+    "google-closure-compiler": "20170806.0.0",
     "gulp": "3.9.1",
     "gulp-ava": "^0.18.0",
-    "gulp-closure-compiler": "0.4.0",
     "gulp-eslint": "3.0.1",
     "gulp-exec": "2.1.2",
     "gulp-file": "0.2.0",
