--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
   - gem install percy-capybara phantomjs poltergeist
   # Poltergeist requires an absolute path to find phantomjs. See #10305.
   - export PATH="`pwd`/node_modules/.bin:$PATH"
-script: node build-system/pr-check.js
+script: java -XX:+PrintFlagsFinal -version 2>&1 | grep HeapSize
 branches:
   only:
     - master
