--- a/build-system/global-configs/canary-config.json
+++ b/build-system/global-configs/canary-config.json
@@ -29,6 +29,5 @@
   "ad-loader-v2": 1,
   "3p-use-ampcontext": 0,
   "amp-animation": 1,
-  "amp-sidebar toolbar": 1,
-  "amp-position-observer": 1
+  "amp-sidebar toolbar": 1
 }
