--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ notifications:
 before_install:
   - export CHROME_BIN=google-chrome
   - export DISPLAY=:99.0
-  - export _JAVA_OPTIONS="-Xmx1870m -Xms118m"  # Restore JVM heap sizes. #11203.
+  - unset _JAVA_OPTIONS  # JVM heap sizes break closure compiler. #11203.
   - sh -e /etc/init.d/xvfb start
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
   - sudo dpkg -i google-chrome*.deb
@@ -20,6 +20,7 @@ before_script:
   - gem install percy-capybara phantomjs poltergeist
   # Poltergeist requires an absolute path to find phantomjs. See #10305.
   - export PATH="`pwd`/node_modules/.bin:$PATH"
+  - java -XX:+PrintFlagsFinal -version 2>&1 | grep HeapSize
 script: node build-system/pr-check.js
 branches:
   only:
