--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.0",
   "description": "Fastish HTML",
   "main": "index.js",
+  "engines": {
+    "node": ">=6",
+    "yarn": ">=1.0.2"
+  },
   "author": "The AMP HTML Authors",
   "license": "Apache-2.0",
   "repository": {
