The linter complains about long "import" lines, as described in issue #8750. I added an ignore pattern to ignore the "import" statements as far as the "max-len" rule is concerned.

--- a/.eslintrc
+++ b/.eslintrc
@@ -53,7 +53,7 @@
     "max-len": [2, 80, 4, {
       "ignoreComments": true,
       "ignoreUrls": true,
-      "ignorePattern": ""
+      "ignorePattern": "^\\s*import\\s+{[^}]+}\\s+from\\s+'[^']+'\\s*;$"
     }],
     "no-alert": 2,
     "no-array-destructuring": 2,
