--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "babel-polyfill": "6.26.0",
     "document-register-element": "1.5.0",
     "promise-pjs": "1.1.3",
-    "web-animations-js": "2.3.1",
-    "yarn": "^1.2.1"
+    "web-animations-js": "2.3.1"
   },
   "devDependencies": {
     "ajv": "5.2.2",
