Set the validator request UA to the tab’s UA
Having some issues with this commit; the blocking handler runs but doesn’t set the new header name

--- a/validator/chromeextension/manifest.json
+++ b/validator/chromeextension/manifest.json
@@ -29,6 +29,8 @@
   "content_security_policy": "script-src 'self' https://cdn.ampproject.org; object-src 'self'",
   "homepage_url": "https://www.ampproject.org",
   "permissions": [
+    "webRequest",
+    "webRequestBlocking",
     "tabs",
     "<all_urls>"
   ]
