--- a/package.json
+++ b/package.json
@@ -33,57 +33,57 @@
   },
   "devDependencies": {
     "atob": "2.0.3",
-    "autoprefixer": "^6.7.0",
+    "autoprefixer": "6.7.0",
     "ava": "0.15.2",
     "babel-core": "6.26.0",
     "babel-eslint": "6.1.2",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-env": "1.5.2",
-    "babelify": "^7.3.0",
+    "babelify": "7.3.0",
     "baconipsum": "0.1.2",
     "bluebird": "3.0.5",
     "body-parser": "1.14.2",
-    "browserify": "^14.4.0",
+    "browserify": "14.4.0",
     "browserify-istanbul": "2.0.0",
     "chai": "3.5.0",
     "chai-as-promised": "5.2.0",
     "chalk": "1.1.3",
-    "cssnano": "^3.3.2",
-    "del": "^2.2.0",
+    "cssnano": "3.3.2",
+    "del": "2.2.0",
     "eslint": "3.18.0",
     "eslint-plugin-google-camelcase": "0.0.2",
     "esprima": "3.1.3",
     "express": "4.14.0",
     "fetch-mock": "5.12.2",
-    "file-reader": "^1.1.1",
+    "file-reader": "1.1.1",
     "formidable": "1.0.17",
-    "fs-extra": "^0.27.0",
+    "fs-extra": "0.27.0",
     "glob": "7.1.2",
-    "gulp": "^3.9.1",
+    "gulp": "3.9.1",
     "gulp-ava": "^0.18.0",
-    "gulp-closure-compiler": "^0.4.0",
-    "gulp-eslint": "^3.0.1",
+    "gulp-closure-compiler": "0.4.0",
+    "gulp-eslint": "3.0.1",
     "gulp-exec": "2.1.2",
     "gulp-file": "0.2.0",
-    "gulp-git": "^2.3.2",
-    "gulp-help": "^1.6.1",
-    "gulp-if": "^2.0.0",
-    "gulp-intercept": "^0.1.0",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
+    "gulp-git": "2.3.2",
+    "gulp-help": "1.6.1",
+    "gulp-if": "2.0.0",
+    "gulp-intercept": "0.1.0",
+    "gulp-load-plugins": "1.2.0",
+    "gulp-rename": "1.2.2",
+    "gulp-replace": "0.5.4",
     "gulp-sourcemaps": "1.5.2",
     "gulp-uglify": "2.0.1",
     "gulp-util": "3.0.7",
-    "gulp-watch": "^4.3.5",
+    "gulp-watch": "4.3.5",
     "gulp-webserver": "0.9.1",
     "gulp-wrap": "0.11.0",
     "gzip-size": "3.0.0",
     "is-running": "2.1.0",
-    "jison": "^0.4.18",
+    "jison": "0.4.18",
     "jsdom": "9.2.1",
     "json-stable-stringify": "1.0.1",
-    "karma": "^1.7.0",
+    "karma": "1.7.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "5.1.1",
     "karma-chai": "0.1.0",
@@ -101,9 +101,9 @@
     "karma-sauce-launcher": "1.1.0",
     "karma-sinon-chai": "1.2.3",
     "karma-super-dots-reporter": "0.1.0",
-    "lazypipe": "^1.0.1",
+    "lazypipe": "1.0.1",
     "lolex": "1.4.0",
-    "markdown-link-check": "^3.0.3",
+    "markdown-link-check": "3.0.3",
     "minimatch": "3.0.0",
     "minimist": "1.2.0",
     "mocha": "2.5.3",
@@ -112,20 +112,20 @@
     "path": "0.12.7",
     "phantomjs-prebuilt": "2.1.14",
     "postcss": "5.2.10",
-    "postcss-import": "^9.1.0",
+    "postcss-import": "9.1.0",
     "pretty-bytes": "2.0.1",
-    "request": "^2.73.0",
+    "request": "2.73.0",
     "rimraf": "2.5.1",
     "shuffle-seed": "1.1.6",
     "sinon": "1.17.7",
     "sinon-chai": "2.8.0",
     "text-table": "0.2.0",
     "through2": "2.0.0",
-    "touch": "^1.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0",
-    "yamljs": "^0.3.0"
+    "touch": "1.0.0",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.9.0",
+    "yamljs": "0.3.0"
   },
   "ava": {
     "files": [
