--- a/build-system/global-configs/canary-config.json
+++ b/build-system/global-configs/canary-config.json
@@ -33,4 +33,5 @@
   "amp-position-observer": 1,
   "a4a-safeframe-preloading-off": 0.01,
   "expUnconditionedAdxIdentity": 0.01,
-  "expUnconditionedAdxIdentity": 0.01}
+  "expUnconditionedAdxIdentity": 0.01
+}
