--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ jobs:
       script:
         - unbuffer node build-system/pr-check/remote-tests.js
       after_script:
+        - build-system/sauce_connect/stop_sauce_connect.sh
         - ps -ef
     - stage: test
       name: "End to End Tests"
@@ -89,6 +90,7 @@ cache:
     - node_modules
     - build-system/tasks/e2e/node_modules
     - build-system/tasks/visual-diff/node_modules
+    - sauce_connect
     - validator/node_modules
     - validator/nodejs/node_modules
     - validator/webui/node_modules
