--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/core": "7.5.5",
     "@babel/helper-plugin-test-runner": "7.1.0",
     "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/plugin-proposal-dynamic-import": "7.5.0",
     "@babel/preset-env": "7.5.5",
     "@jridgewell/resorcery": "0.0.3",
     "@octokit/rest": "16.28.7",
