--- a/build-system/global-configs/experiments-config.json
+++ b/build-system/global-configs/experiments-config.json
@@ -5,10 +5,6 @@
     "issue": "",
     "define": "ANALYTICS_VENDOR_SPLIT"
   },
-  "experimentB": {
-    "name": "SINGLE_PASS",
-    "command": "gulp dist --single_pass",
-    "issue": ""
-  },
+  "experimentB": {},
   "experimentC": {}
 }
