--- a/.travis.yml
+++ b/.travis.yml
@@ -81,6 +81,8 @@ jobs:
         - ps -ef
     - stage: test
       name: "End to End Tests"
+      before_script
+        - build-system/pr-check/install-chromedriver.sh
       script:
         - unbuffer node build-system/pr-check/e2e-tests.js
       after_script:
