--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ c
 dist.3p
 dist.tools
 examples.min
-/extensions/**/*-expr-impl.js
+extensions/**/*-expr-impl.js
 node_modules
 npm-debug.log
 .idea
