--- a/.eslintignore
+++ b/.eslintignore
@@ -15,6 +15,7 @@ build-system/babel-plugins/**/fixtures/**/*.js
 build-system/app-index/test/**/*.js
 examples/**
 extensions/amp-a4a/0.1/test/testdata/**
+extensions/**/*-expr-impl.js
 testing/local-amp-chrome-extension/**
 third_party/**
 validator/**
