--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/preset-env": "7.12.11",
     "@chiragrupani/karma-chromium-edge-launcher": "2.1.0",
     "@jest/core": "26.6.3",
+    "@sinonjs/fake-timers": "7.0.2",
     "@types/fancy-log": "1.3.1",
     "@types/minimist": "1.2.1",
     "acorn-globals": "6.0.0",
@@ -153,7 +154,6 @@
     "klaw": "3.0.0",
     "lazypipe": "1.0.2",
     "list-imports-exports": "0.1.2",
-    "lolex": "5.1.2",
     "magic-string": "0.25.7",
     "markdown-link-check": "3.8.6",
     "minimatch": "3.0.4",
