--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "web-animations-js": "2.3.1"
   },
   "devDependencies": {
-    "0x": "4.10.2",
     "@ampproject/filesize": "4.2.0",
     "@ampproject/google-closure-compiler": "20201207.0.0",
     "@ampproject/remapping": "1.0.1",
@@ -53,6 +52,7 @@
     "@sinonjs/fake-timers": "7.0.2",
     "@types/fancy-log": "1.3.1",
     "@types/minimist": "1.2.1",
+    "0x": "4.10.2",
     "acorn-globals": "6.0.0",
     "amphtml-validator": "1.0.34",
     "ansi-colors": "4.1.1",
@@ -145,9 +145,9 @@
     "karma-mocha": "2.0.1",
     "karma-mocha-reporter": "2.2.5",
     "karma-safarinative-launcher": "1.1.0",
-    "karma-simple-reporter": "2.0.0",
     "karma-sinon-chai": "2.0.2",
     "karma-source-map-support": "1.4.0",
+    "karma-spec-reporter": "0.0.32",
     "karma-structured-json-reporter": "1.0.1",
     "karma-super-dots-reporter": "0.2.0",
     "klaw": "3.0.0",
