--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "sinon": "9.2.4",
     "sinon-chai": "3.5.0",
     "sourcemap-codec": "1.4.8",
+    "sync-rpc": "1.3.6",
     "tar": "6.1.0",
     "tcp-port-used": "1.0.2",
     "tempy": "1.0.0",
