--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "@types/minimist": "1.2.1",
     "acorn-globals": "6.0.0",
     "amphtml-validator": "1.0.34",
-    "ansi-colors": "4.1.1",
     "ast-replace": "1.1.3",
     "atob": "2.1.2",
     "autoprefixer": "10.2.4",
@@ -150,6 +149,7 @@
     "karma-structured-json-reporter": "1.0.1",
     "karma-super-dots-reporter": "0.2.0",
     "klaw": "3.0.0",
+    "kleur": "4.1.4",
     "lazypipe": "1.0.2",
     "list-imports-exports": "0.1.2",
     "magic-string": "0.25.7",
