--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ast-replace": "1.1.3",
     "atob": "2.1.2",
     "autoprefixer": "10.2.4",
+    "ava": "3.15.0",
     "babel-plugin-istanbul": "6.0.0",
     "babel-plugin-minify-replace": "0.5.0",
     "babelify": "10.0.0",
@@ -107,7 +108,6 @@
     "globby": "11.0.2",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "gulp-ava": "3.0.0",
     "gulp-babel": "8.0.0",
     "gulp-connect": "5.7.0",
     "gulp-debounce": "1.0.2",
