--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "chai": "4.3.0",
     "chai-as-promised": "7.1.1",
     "check-dependencies": "1.1.0",
+    "chokidar": "3.5.1",
     "cli-highlight": "2.1.10",
     "codecov": "3.8.1",
     "commander": "7.0.0",
@@ -112,8 +113,6 @@
     "gulp-connect": "5.7.0",
     "gulp-file": "0.4.0",
     "gulp-if": "3.0.0",
-    "gulp-jsonlint": "1.3.2",
-    "gulp-jsonminify": "1.1.0",
     "gulp-nop": "0.0.3",
     "gulp-regexp-sourcemaps": "1.0.1",
     "gulp-rename": "2.0.0",
@@ -127,6 +126,7 @@
     "jsdom": "16.4.0",
     "json-stable-stringify": "1.0.1",
     "json5": "2.2.0",
+    "jsonminify": "0.4.1",
     "karma": "6.1.0",
     "karma-browserify": "8.0.0",
     "karma-chai": "0.1.0",
