--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "envify": "4.1.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-preact-pure": "3.0.0",
+    "esbuild": "0.8.46",
     "escodegen": "2.0.0",
     "eslint": "7.19.0",
     "eslint-config-prettier": "7.2.0",
@@ -115,7 +116,6 @@
     "gulp-file": "0.4.0",
     "gulp-if": "3.0.0",
     "gulp-nop": "0.0.3",
-    "gulp-regexp-sourcemaps": "1.0.1",
     "gulp-rename": "2.0.0",
     "gulp-sourcemaps": "3.0.0",
     "gulp-watch": "5.0.1",
@@ -188,7 +188,6 @@
     "tsickle": "0.39.1",
     "typescript": "4.1.3",
     "uglifyify": "5.0.2",
-    "vinyl-buffer": "1.0.1",
     "vinyl-source-stream": "2.0.0",
     "vinyl-sourcemaps-apply": "0.2.1",
     "watchify": "4.0.0"
