--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@chiragrupani/karma-chromium-edge-launcher": "2.1.0",
     "@jest/core": "26.6.3",
     "@sinonjs/fake-timers": "7.0.2",
+    "@types/node": "14.14.28",
     "@types/fancy-log": "1.3.1",
     "@types/minimist": "1.2.1",
     "acorn-globals": "6.0.0",
