--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-jss": "10.3.0",
     "resize-observer-polyfill": "1.5.1",
     "rrule": "2.6.6",
+    "timeago.js": "4.0.2",
     "web-activities": "1.13.0",
     "web-animations-js": "2.3.1"
   },
