--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ava": "3.15.0",
     "babel-plugin-istanbul": "6.0.0",
     "babel-plugin-minify-replace": "0.5.0",
+    "babel-plugin-optimize-objstr": "1.0.0",
     "babelify": "10.0.0",
     "baconipsum": "0.1.2",
     "base62": "2.0.1",
