--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-env": "7.12.17",
     "@chiragrupani/karma-chromium-edge-launcher": "2.1.0",
     "@jest/core": "26.6.3",
+    "@jridgewell/doctrine": "3.0.2",
     "@sinonjs/fake-timers": "7.0.2",
     "@types/fancy-log": "1.3.1",
     "@types/minimist": "1.2.1",
@@ -85,7 +86,6 @@
     "debounce": "1.2.0",
     "del": "6.0.0",
     "derequire": "2.1.1",
-    "doctrine": "3.0.0",
     "envify": "4.1.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-preact-pure": "3.0.0",
