--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@sinonjs/fake-timers": "7.0.2",
     "@types/fancy-log": "1.3.1",
     "@types/minimist": "1.2.1",
+    "@types/mocha": "8.2.1",
     "@types/node": "14.14.31",
     "acorn-globals": "6.0.0",
     "amphtml-validator": "1.0.34",
