--- a/package.json
+++ b/package.json
@@ -68,12 +68,9 @@
     "babel-plugin-istanbul": "6.0.0",
     "babel-plugin-minify-replace": "0.5.0",
     "babel-plugin-optimize-objstr": "1.0.0",
-    "babelify": "10.0.0",
     "baconipsum": "0.1.2",
     "base62": "2.0.1",
     "body-parser": "1.19.0",
-    "browserify": "17.0.0",
-    "browserify-persist-fs": "1.2.2",
     "chai": "4.3.0",
     "chai-as-promised": "7.1.1",
     "check-dependencies": "1.1.0",
@@ -131,10 +128,10 @@
     "json5": "2.2.0",
     "jsonminify": "0.4.1",
     "karma": "6.1.1",
-    "karma-browserify": "8.0.0",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-esbuild": "1.1.5",
     "karma-firefox-launcher": "2.1.0",
     "karma-fixture": "0.2.6",
     "karma-html2js-preprocessor": "1.1.0",
@@ -180,6 +177,7 @@
     "sinon": "9.2.4",
     "sinon-chai": "3.5.0",
     "sourcemap-codec": "1.4.8",
+    "stream-browserify": "3.0.0",
     "sync-rpc": "1.3.6",
     "tar": "6.1.0",
     "tcp-port-used": "1.0.2",
