--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "jest-dot-reporter": "1.0.12",
     "jest-silent-reporter": "0.4.0",
     "jison": "0.4.18",
+    "jscodeshift": "0.11.0",
     "jsdom": "16.4.0",
     "json-stable-stringify": "1.0.1",
     "json5": "2.2.0",
