--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "eslint-plugin-chai-expect": "2.2.0",
     "eslint-plugin-eslint-plugin": "2.3.0",
     "eslint-plugin-google-camelcase": "0.0.2",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jasmine": "4.1.2",
     "eslint-plugin-jsdoc": "32.2.0",
     "eslint-plugin-local": "1.0.0",
