--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
     "jss-preset-default": "10.4.0",
     "moment": "2.24.0",
     "obj-str": "1.0.3",
-    "open": "7.3.0",
     "preact": "10.2.1",
     "promise-pjs": "1.1.4",
-    "prop-types": "15.7.2",
     "react-dates": "15.5.3",
     "react-jss": "10.3.0",
     "resize-observer-polyfill": "1.5.1",
@@ -38,7 +36,6 @@
     "web-animations-js": "2.3.1"
   },
   "devDependencies": {
-    "0x": "4.10.2",
     "@ampproject/filesize": "4.3.0",
     "@ampproject/google-closure-compiler": "20210202.0.0",
     "@ampproject/remapping": "1.0.1",
@@ -48,6 +45,7 @@
     "@babel/helper-plugin-test-runner": "7.12.13",
     "@babel/plugin-proposal-class-properties": "7.13.0",
     "@babel/plugin-syntax-import-assertions": "7.12.1",
+    "@babel/plugin-transform-classes": "7.13.0",
     "@babel/plugin-transform-react-constant-elements": "7.12.13",
     "@babel/plugin-transform-react-jsx": "7.12.17",
     "@babel/preset-env": "7.13.9",
@@ -83,8 +81,6 @@
     "cssnano": "4.1.10",
     "debounce": "1.2.0",
     "del": "6.0.0",
-    "derequire": "2.1.1",
-    "envify": "4.1.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-preact-pure": "3.0.0",
     "esbuild": "0.8.57",
@@ -105,6 +101,7 @@
     "eslint-plugin-sort-imports-es6-autofix": "0.5.0",
     "eslint-plugin-sort-requires": "2.1.0",
     "event-stream": "4.0.1",
+    "events": "3.3.0",
     "express": "4.17.1",
     "fancy-log": "1.3.3",
     "fetch-mock": "9.11.0",
@@ -160,19 +157,15 @@
     "multer": "1.4.2",
     "node-fetch": "2.6.1",
     "npm-exact-versions": "0.0.5",
+    "open": "8.0.2",
     "plugin-error": "1.0.1",
     "postcss": "8.2.7",
     "postcss-import": "14.0.0",
     "posthtml": "0.15.1",
     "prettier": "2.2.1",
-    "pretty-bytes": "5.6.0",
     "pumpify": "2.0.1",
     "react": "17.0.1",
-    "react-addons-shallow-compare": "15.6.3",
     "react-dom": "17.0.1",
-    "react-externs": "0.13.6",
-    "react-with-direction": "1.3.1",
-    "renovate": "24.77.3",
     "request": "2.88.2",
     "request-promise": "4.2.6",
     "rocambole": "0.7.0",
@@ -190,8 +183,9 @@
     "traverse": "0.6.6",
     "tsickle": "0.39.1",
     "typescript": "4.2.3",
-    "uglifyify": "5.0.2",
-    "vinyl-sourcemaps-apply": "0.2.1",
-    "watchify": "4.0.0"
+    "util": "0.12.3"
+  },
+  "resolutions": {
+    "@babel/helper-transform-fixture-test-runner": "7.12.13"
   }
 }
