--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "globby": "11.0.2",
     "gulp-connect": "5.7.0",
     "html-minifier": "4.0.0",
+    "ignore": "5.1.8",
     "istanbul-middleware": "0.2.2",
     "jest-dot-reporter": "1.0.12",
     "jest-silent-reporter": "0.5.0",
