--- a/package.json
+++ b/package.json
@@ -156,7 +156,6 @@
     "morgan": "1.10.0",
     "multer": "1.4.2",
     "node-fetch": "2.6.1",
-    "npm-exact-versions": "0.0.5",
     "open": "8.0.2",
     "plugin-error": "1.0.1",
     "postcss": "8.2.7",
@@ -168,6 +167,7 @@
     "request": "2.88.2",
     "request-promise": "4.2.6",
     "rocambole": "0.7.0",
+    "semver": "7.3.5",
     "sinon": "9.2.4",
     "sinon-chai": "3.5.0",
     "sourcemap-codec": "1.4.8",
