--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@jest/core": "26.6.3",
     "@jridgewell/doctrine": "3.0.2",
     "@sinonjs/fake-timers": "7.0.2",
+    "@types/eslint": "7.2.7",
     "@types/fancy-log": "1.3.1",
     "@types/minimist": "1.2.1",
     "@types/mocha": "8.2.1",
